[package]
name = "wasmtime-wasi-crypto"
version = "45.0.0"
edition = "2021"
description = "Glue exposing the wasi-crypto host functions to Wasmtime, like regular WASI"
license = "Apache-2.0 WITH LLVM-exception"
repository = "https://github.com/wasm-crypto/wasi-crypto-host-functions"
documentation = "https://docs.rs/wasmtime-wasi-crypto"
readme = "README.md"
keywords = ["webassembly", "wasm", "wasi", "crypto", "wasmtime"]
categories = ["wasm", "cryptography"]
include = ["src/**/*.rs", "witx/**/*.witx", "examples/run_demo.rs", "README.md", "LICENSE"]

[dependencies]
wasi-crypto = "0.1.15"
wiggle = { version = "45", features = ["wasmtime"] }
# The Wiggle-generated linker glue references `StoreContextMut::hostcall_fuel`,
# which only exists when Wasmtime is built with `component-model`. We don't run
# components, but the feature has to be on for the glue to compile.
wasmtime = { version = "45", default-features = false, features = ["cranelift", "runtime", "component-model"] }
thiserror = "2"

[dev-dependencies]
wasmtime-wasi = { version = "45", features = ["p1"] }

[[example]]
name = "run_demo"
path = "examples/run_demo.rs"

[workspace]
